--- a/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
+++ b/CryptocurrenciesCollector/Pages/DetailInformationPage.xaml
@@ -54,46 +54,54 @@
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="0" 
                            Grid.Row="0" 
-                           FontWeight="Bold" 
+                           FontWeight="SemiBold" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="Price (USD) " 
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="0" 
                            Grid.Row="1" 
-                           FontWeight="Bold" 
+                           FontWeight="SemiBold" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="Volume (24Hr) " 
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="0" 
                            Grid.Row="2" 
-                           FontWeight="Bold" 
+                           FontWeight="SemiBold" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="Change (24Hr%) " 
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="0" 
                            Grid.Row="3" 
-                           FontWeight="Bold" 
+                           FontWeight="SemiBold" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
 
                 <TextBlock Text="{Binding CryptocurrencyInfo.Name}" 
                            Foreground="{DynamicResource Text}"
                            Grid.Column="1" 
                            Grid.Row="0" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="{Binding CryptocurrencyInfo.PriceUsd, StringFormat={}{0:C3}}"
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="1" 
                            Grid.Row="1" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="{Binding CryptocurrencyInfo.VolumeUsd24Hr, StringFormat={}{0:C3}}" 
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="1" 
-                           Grid.Row="2" 
+                           Grid.Row="2"  
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
                 <TextBlock Text="{Binding CryptocurrencyInfo.ChangePercent24Hr, StringFormat={}{0:F2}%}" 
                            Foreground="{DynamicResource Text}" 
                            Grid.Column="1" 
                            Grid.Row="3" 
+                           FontSize="16"
                            HorizontalAlignment="Left"/>
             </Grid>
 
@@ -120,6 +128,7 @@
                                    Converter={StaticResource BooleanToVisibilityConverter}}"
                       HorizontalAlignment="Left" VerticalAlignment="Top"
                       Margin="0 10 0 40"
+                      FontSize="16"
                       Grid.Row="1">
 
                 <ListView.View>
@@ -149,10 +158,12 @@
 
             <Grid Grid.Column="1"
                   Grid.RowSpan="2"
-                  Margin="15 0 0 40">
+                  Margin="15 0 0 40"
+                  Height="Auto">
                 <oxy:PlotView x:Name="plotView"
                               Model="{Binding CurrentPlotModel}"
-                              IsMouseWheelEnabled="False">
+                              IsMouseWheelEnabled="False"
+                              Background="Transparent">
                     <i:Interaction.Behaviors>
                         <helpers:PlotViewBehavior/>
                     </i:Interaction.Behaviors>
@@ -161,13 +172,12 @@
             </Grid>
 
             <Grid Grid.Row="1" Grid.Column="1" Height="Auto"
-                  HorizontalAlignment="Center" Margin="0 5">
+                  HorizontalAlignment="Center" Margin="0 5"
+                  VerticalAlignment="Bottom">
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                     <RadioButton Content="1D" 
                                  Command="{Binding GetCandlesWith1DayIntervalCommand}"
-                                 IsChecked="True"
-                                 Height="25"
-                                 VerticalAlignment="Bottom"   
+                                 Height="25" 
                                  Foreground="{DynamicResource Text}"
                                  FontSize="14"
                                  Style="{StaticResource MenuButtonStyle}"/>
@@ -175,16 +185,15 @@
                                  Command="{Binding GetCandlesWith7DaysIntervalCommand}"
                                  Height="25"
                                  HorizontalAlignment="Stretch"
-                                 VerticalAlignment="Bottom"
                                  Foreground="{DynamicResource Text}" 
                                  FontSize="14"
                                  Style="{StaticResource MenuButtonStyle}"
                                  Margin="15 0"/>
                     <RadioButton Content="1M" 
+                                 IsChecked="True"
                                  Command="{Binding GetCandlesWith1MonthIntervalCommand}"
                                  Height="25"
                                  HorizontalAlignment="Stretch"
-                                 VerticalAlignment="Bottom"
                                  Foreground="{DynamicResource Text}"
                                  FontSize="14"
                                  Style="{StaticResource MenuButtonStyle}"/>
@@ -192,7 +201,6 @@
                                  Command="{Binding GetCandlesWith3MonthsIntervalCommand}"
                                  Height="25"
                                  HorizontalAlignment="Stretch"
-                                 VerticalAlignment="Bottom"
                                  Foreground="{DynamicResource Text}"
                                  FontSize="14"
                                  Style="{StaticResource MenuButtonStyle}"
