--- a/CryptocurrenciesCollector/Themes/LightTheme.xaml
+++ b/CryptocurrenciesCollector/Themes/LightTheme.xaml
@@ -5,4 +5,6 @@
     <SolidColorBrush Color="#dcdde1" x:Key="Card"/>
     <SolidColorBrush Color="DarkGray" x:Key="SubText"/>
     <SolidColorBrush Color="#FFCBCFDC"  x:Key="PressedButton"/>
+    <SolidColorBrush Color="#FFDDDDDD" x:Key="SelectedBackgroundColor"/>
+    <SolidColorBrush Color="#FFCCCCCC" x:Key="HoverBackgroundColor"/>
 </ResourceDictionary>
