--- a/CryptocurrenciesCollector/Pages/MainPage.xaml
+++ b/CryptocurrenciesCollector/Pages/MainPage.xaml
@@ -4,13 +4,18 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+      xmlns:lex="http://wpflocalizeextension.codeplex.com"
+      lex:LocalizeDictionary.DesignCulture="uk"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="MainPage">
 
     <Grid>
         <StackPanel>
-            <TextBlock Text="Top 10"
+            <TextBlock Name="Top10Text"
+                       Text="{lex:Loc}"
                        HorizontalAlignment="Center" VerticalAlignment="Top"
                        Grid.Row="0" Grid.Column="0" 
                        FontSize="34" 
@@ -55,7 +60,7 @@
                 
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn Header="Rank" Width="150">
+                        <GridViewColumn Header="{lex:Loc RankHeader}" Width="150">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Rank}"
@@ -63,7 +68,7 @@
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-                        <GridViewColumn Header="Name" Width="Auto">
+                        <GridViewColumn Header="{lex:Loc NameHeader}" Width="Auto">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Name}"
