--- a/CryptocurrenciesCollector/Pages/ConvertPage.xaml
+++ b/CryptocurrenciesCollector/Pages/ConvertPage.xaml
@@ -6,7 +6,10 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:CryptocurrenciesCollector.Pages"
       xmlns:helpers="clr-namespace:CryptocurrenciesCollector.Helpers.Behaviors;assembly=CryptocurrenciesCollector.Helpers"
-      
+      xmlns:lex="http://wpflocalizeextension.codeplex.com"
+      lex:LocalizeDictionary.DesignCulture="en"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ConvertPage">
@@ -53,7 +56,7 @@
             </StackPanel>
 
 
-            <TextBlock Text="Такой криптовалюты нет" 
+            <TextBlock Text="{lex:Loc NoCryptocurrencyMessage}" 
                    Foreground="Red"
                    FontWeight="Bold" 
                    HorizontalAlignment="Center" 
