--- a/CryptocurrenciesCollector/Pages/SearchPage.xaml
+++ b/CryptocurrenciesCollector/Pages/SearchPage.xaml
@@ -3,12 +3,16 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:lex="http://wpflocalizeextension.codeplex.com"
+      lex:LocalizeDictionary.DesignCulture="en"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SearchPage">
 
     <Grid>
-        <TextBlock Text="Results"
+        <TextBlock Text="{lex:Loc SearchResults}"
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Top"
                    Margin="0 0 0 0"
@@ -19,15 +23,47 @@
                    FontWeight="Bold" 
                    FontFamily="Comic Sans MS"/>
         <ListView ItemsSource="{Binding SearchedCryptocurrencies}"
+                  Background="Transparent"
                   HorizontalAlignment="Center" 
                   VerticalAlignment="Top"
                   Margin="0 35 0 15"
                   SelectedItem="{Binding SelectedSearchCryptocurrency, Mode=TwoWay}">
-        <ListView.View>
+
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="BorderBrush" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="{DynamicResource Text}"/>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource HoverBackground}"/>
+                            <Setter Property="Foreground" Value="{DynamicResource Text}"/>
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="{DynamicResource SelectedBackground}"/>
+                            <Setter Property="Foreground" Value="{DynamicResource Text}"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
+
+            <ListView.Resources>
+                <Style TargetType="GridViewColumnHeader">
+                    <Setter Property="IsHitTestVisible" Value="False"/>
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Setter Property="Foreground" Value="{DynamicResource Text}"/>
+                </Style>
+                <Style TargetType="ScrollBar">
+                    <Setter Property="Background" Value="{DynamicResource Card}"/>
+                </Style>
+            </ListView.Resources>
+                
+            <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="100"/>
-                    <GridViewColumn Header="Price (USD)" DisplayMemberBinding="{Binding PriceUsd}" Width="150"/>
-                    <GridViewColumn Header="Change (24Hr%)" DisplayMemberBinding="{Binding ChangePercent24Hr}" Width="100"/>
+                    <GridViewColumn Header="{lex:Loc NameHeader}" DisplayMemberBinding="{Binding Name}"/>
+                    <GridViewColumn Header="{lex:Loc PriceHeader}" DisplayMemberBinding="{Binding PriceUsd, StringFormat={}{0:C3}}"/>
+                    <GridViewColumn Header="{lex:Loc ChangeHeader}" DisplayMemberBinding="{Binding ChangePercent24Hr, StringFormat={}{0:F2}%}"/>
                 </GridView>
             </ListView.View>
         </ListView>
