--- a/CryptocurrenciesCollector/Pages/SettingsPage.xaml
+++ b/CryptocurrenciesCollector/Pages/SettingsPage.xaml
@@ -5,6 +5,10 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:CryptocurrenciesCollector.Pages"
       xmlns:converters ="clr-namespace:CryptocurrenciesCollector.Helpers.Converters;assembly=CryptocurrenciesCollector.Helpers"
+      xmlns:lex="http://wpflocalizeextension.codeplex.com"
+      lex:LocalizeDictionary.DesignCulture="en"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SettingsPage">
@@ -18,7 +22,7 @@
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top">
             <StackPanel Orientation="Horizontal">
-                <RadioButton Content="Dark" 
+                <RadioButton Content="{lex:Loc DarkTheme}" 
                      IsChecked="{Binding CurrentThemeIsDark, Mode=TwoWay}"
                      Width="100"
                      Height="50"
@@ -27,7 +31,7 @@
                              CommandParameter="DarkTheme"
                      FontSize="14"
                      Style="{StaticResource MenuButtonStyle}"/>
-                <RadioButton Content="Light" 
+                <RadioButton Content="{lex:Loc LightTheme}" 
                      IsChecked="{Binding CurrentThemeIsDark, Mode=TwoWay, Converter={StaticResource InverseBoolConverter}}"
                      Width="100"
                      Height="50"
