--- a/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
+++ b/CryptocurrenciesCollector/Themes/TextboxStyle.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:lex="http://wpflocalizeextension.codeplex.com">
     <Style TargetType="{x:Type TextBox}"
            x:Key="TextboxStyle">
         <Setter Property="Template">
@@ -16,11 +17,11 @@
                                      Background="Transparent"
                                      VerticalContentAlignment="Center"
                                      Padding="5"
-                                     Foreground="#CFCFCF"
+                                     Foreground="{DynamicResource SubText}"
                                      x:Name="SearchBox"/>
 
                             <TextBlock IsHitTestVisible="False"
-                                       Text="Search here..."
+                                       Text="{lex:Loc SearchPlaceHolder}"
                                        VerticalAlignment="Center"
                                        HorizontalAlignment="Left"
                                        Margin="10 0 0 0"
