added settings loading from settings file on application start

--- a/CryptocurrenciesCollector/App.xaml
+++ b/CryptocurrenciesCollector/App.xaml
@@ -5,6 +5,7 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
+            <local:ViewModelLocator x:Key="locator"/>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/MenuButtonStyle.xaml"/>
                 <ResourceDictionary Source="Themes/TextboxStyle.xaml"/>
