--- a/CryptocurrenciesCollector/Pages/ConvertPage.xaml
+++ b/CryptocurrenciesCollector/Pages/ConvertPage.xaml
@@ -8,7 +8,7 @@
       xmlns:helpers="clr-namespace:CryptocurrenciesCollector.Helpers.Behaviors;assembly=CryptocurrenciesCollector.Helpers"
       xmlns:lex="http://wpflocalizeextension.codeplex.com"
       lex:LocalizeDictionary.DesignCulture="en"
-      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector.Resources"
       lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
