--- a/CryptocurrenciesCollector/Pages/SettingsPage.xaml
+++ b/CryptocurrenciesCollector/Pages/SettingsPage.xaml
@@ -7,7 +7,7 @@
       xmlns:converters ="clr-namespace:CryptocurrenciesCollector.Helpers.Converters;assembly=CryptocurrenciesCollector.Helpers"
       xmlns:lex="http://wpflocalizeextension.codeplex.com"
       lex:LocalizeDictionary.DesignCulture="en"
-      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector"
+      lex:ResxLocalizationProvider.DefaultAssembly="CryptocurrenciesCollector.Resources"
       lex:ResxLocalizationProvider.DefaultDictionary="CryptocurrenciesCollector.Resources.Language"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
@@ -28,7 +28,7 @@
                      Height="50"
                      Foreground="{DynamicResource Text}"
                      Command="{Binding ChangeThemeCommand}"
-                             CommandParameter="DarkTheme"
+                             CommandParameter="Dark"
                      FontSize="14"
                      Style="{StaticResource MenuButtonStyle}"/>
                 <RadioButton Content="{lex:Loc LightTheme}" 
@@ -37,7 +37,7 @@
                      Height="50"
                      Foreground="{DynamicResource Text}"
                      Command="{Binding ChangeThemeCommand}"
-                             CommandParameter="LightTheme"
+                             CommandParameter="Light"
                      FontSize="14"
                      Style="{StaticResource MenuButtonStyle}"/>
             </StackPanel>
@@ -49,7 +49,7 @@
                      Height="50"
                      Foreground="{DynamicResource Text}"
                      Command="{Binding ChangeLanguageCommand}"
-                     CommandParameter="en"
+                     CommandParameter="English"
                      FontSize="14"
                      Style="{StaticResource MenuButtonStyle}"/>
                 <RadioButton Content="Українська" 
@@ -58,7 +58,7 @@
                      Height="50"
                      Foreground="{DynamicResource Text}"
                      Command="{Binding ChangeLanguageCommand}"
-                     CommandParameter="uk"
+                     CommandParameter="Ukrainian"
                      FontSize="14"
                      Style="{StaticResource MenuButtonStyle}"/>
             </StackPanel>
